Fixed spacing on objective overview.

--- a/src/style.css
+++ b/src/style.css
@@ -774,6 +774,16 @@ li h4 {
   background-color: #466ba3;
 }
 
+.top-div > section + section {
+  margin-top: 1rem;
+}
+
+@media (min-width: 1024px) {
+  .top-div > section + section {
+    margin-top: 0rem;
+  }
+}
+
 .top-div section > h3,
 .bottom-div section > h3 {
   font-weight: 600;
